tests/builder/tuple.rs
use boring_derive::Builder;

#[derive(Builder)]
struct Example(usize, String);

fn main() {}
